# ifxsensor

./: CHANGELOG.rst  LICENSE  README.md
ifx_bgt60_device/: package.xml
ifx_bgt60_device/config/: config.json  config_test.json
ifx_bgt60_device/inc_internal/: ifx_bgt60_config_publisher.h  (+6 more)
ifxbgt60_ws/src/ifx_bgt60_device/: CMakeLists.txt  package.xml
ifxbgt60_ws/src/ifx_bgt60_device/config/: config.json
ifxbgt60_ws/src/ifx_bgt60_device/inc_internal/: ifx_bgt60_device_handle.h  ifx_bgt60_device_node_impl.h  ifx_bgt60_raw_data_publisher.h  ifx_bgt60_single_shape_config_publisher.h  ifx_ring_buffer.h
ifxbgt60_ws/src/ifx_bgt60_device/include/ifx_bgt60_device/: ifx_bgt60_device_node.h
ifxbgt60_ws/src/ifx_bgt60_device/launch/: ifx_bgt60_device.launch
ifxbgt60_ws/src/ifx_bgt60_device/lib/sensor_sdk/apps/c/common/: app_common.c  app_common.h  json.cpp  json.hpp  time_formatter.c
ifxbgt60_ws/src/ifx_bgt60_device/lib/sensor_sdk/apps/c/presence_detection/: presence_sensing_defaults.h
ifxbgt60_ws/src/ifx_bgt60_device/lib/sensor_sdk/apps/c/raw_data/: raw_data_defaults.h
ifxbgt60_ws/src/ifx_bgt60_device/lib/sensor_sdk/sdk/c/ifxAlgo/: FFT.h  OSCFAR.h  Signal.h
ifxbgt60_ws/src/ifx_bgt60_device/lib/sensor_sdk/sdk/c/ifxBase/: Cube.h  Error.h  Math.h  Types.h  Vector.h
ifxbgt60_ws/src/ifx_bgt60_device/lib/sensor_sdk/sdk/c/ifxRadar/: AngleMonopulse.h  DBF.h  DeviceControl.h  PeakSearch.h  PresenceSensing.h  RangeSpectrum.h  SDK.h  Target.h
ifxbgt60_ws/src/ifx_bgt60_device/msg/: ifx_bgt60_chirp_obj.msg  ifx_bgt60_config.msg  ifx_bgt60_fmcw_shape_set.msg  ifx_bgt60_raw_data.msg  ifx_bgt60_register_dump.msg  ifx_bgt60_shape_obj.msg  ifx_bgt60_single_shape_config.msg
ifxbgt60_ws/src/ifx_bgt60_device/src/: ifx_bgt60_config_publisher.cpp  ifx_bgt60_device_handle.cpp  ifx_bgt60_device_node.cpp  ifx_bgt60_device_node_impl.cpp  ifx_bgt60_raw_data_publisher.cpp  main.cpp
(+98 files in other folders)
